# stuff

arcade_game/: README.md
arcade_game/code/: Makefile  Makefile.am  Makefile.in  cmdline.c  cmdline.h  config.h  config.status  configure  draw.c  draw.h  game.h  game_logic.h  main.c  maze.c  maze.h  maze_game  player.c  player.h
arcade_game/code/autom4te.cache/: output.1  requests  traces.0  traces.2
arcade_game/maps/: level0  level1  level2  level3  level4  level5  maze.txt
assets/: universal-lpc-sprite_male_01_full.png:Zone.Identifier
code/: Makefile  Makefile.am  Makefile.in  args.c  args.h  cmdline.c  cmdline.h  config.h  config.status  configure.ac  draw.c  draw.h  game.c  game.h  game_logic.c  input.c  input.h  main.c  maze.c  maze.h  maze.txt  maze_game  player.c  player.h
code/.deps/: maze_game-argp_config.Po  maze_game-args.Po  maze_game-draw.Po  maze_game-game.Po  maze_game-input.Po  maze_game-main.Po
code/autom4te.cache/: output.2  requests
maps/: level0  level1  level2  level3  level4  level5  maze.txt
